2021-September-26 Struan Robertson

		* CollisionOperator.cpp, gWellProperties.h/.cpp: Fixes for Linux64 build breaks.

2021-September-26 Struan Robertson

		* CollisionOperator.cpp, gWellProperties.h/.cpp, TMatrix.h, MesmerFlags.cpp: 
		Updated old print matrix method for new.

		* mesmer1.xsl: Fix for Cantera format.

		* Win32 Baseline update.

2021-September-25 Struan Robertson

		* CollisionOperator.cpp: Fixed for reservoir state and dissociation reaction.

		* Documentation update.

2021-September-05 Struan Robertson

		* gDensityOfStates.h/.cpp: Fixed for thermodynamic functions at 0 K.

		* System.h: Version update.

2021-July-25 Struan Robertson

		* CollisionOperator.cpp: Replaced numerical integration of sink product distribution 
		with analytical solution.

		* Regression test update.

2021-July-10 Struan Robertson

		* <Reversible>Reaction.cpp classes: Modifications relating to multiple transition states.

		* Regression test update.

2021-June-25 Struan Robertson

		* ConditionsManager.cpp: Gradient calculation during trace fitting corrected for weights.

		* Documentation update.

2021-June-22 Struan Robertson

		* fitting.cpp: Diffusive loss term update and compliation fixes.
		
		* ConditionsManager.cpp: Warning added about diffusive loss.

		* Test update.

2021-June-13 Struan Robertson

		* Documentation update.

		* Schema update.

2021-June-10 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.h/.cpp, MesmerFlags.h/.cpp, Marquardt.cpp,
		rawdataplot.xsl: Fixes for diffusive loss array.

2021-May-29 Struan Robertson

		* AssociationReaction.cpp, BimolecualrSinkReaction.cpp, IrreversibleUnimolecularReaction.cpp,
		IsomerizatioReaction.cpp, gDensityOfSates.cpp, MesmerTools.h/.cpp, ThermodymanicTables.cpp,
		UnitTest.cpp, Reaction.cpp: High Pressure rate coefficients calculations altered to use higher 
		energy cut-off.

2021-April-29 Struan Robertson

		* CollisionOperator.cpp: Initial implementation of diffusive loss array.
