@@ -98,7 +98,7 @@ namespace mesmer
 
   private:
 
-    void calcRateCoefficients(const qdMatrix& mesmerRates, const unsigned calPoint) ;
+    void calcRateCoefficients(const qdMatrix& mesmerRates, const qdMatrix& lossRates, const unsigned calPoint) ;
     void calcYields(const unsigned calPoint);
     void calcEigenvalues(const unsigned calPoint);
     void calcRawData(const unsigned calPoint);
